// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`inlineCssVars handles multiple CSS variables 1`] = `
"h1 { color: #ff0000; }
      p { color: #00ff00; }"
`;

exports[`inlineCssVars removes declarations with undefined variables 1`] = `
".button {
        background: #ff0000;
      }"
`;

exports[`inlineCssVars removes declarations with any undefined variable in multi-var declarations 1`] = `
".box {
        padding: 10px 10px;
      }"
`;

exports[`inlineCssVars removes declarations with undefined variables instead of preserving them 1`] = `
"h1 {
        background: #ff0000;
      }"
`;

exports[`inlineCssVars handles multiple var() references in single declaration 1`] = `".box { margin: 20px 10px; }"`;

exports[`inlineCssVars ignores :root when part of a larger selector 1`] = `
":root.dark {
        --primary-color: #000000;
      }
      :root.light {
        --primary-color: #ffffff;
      }
      .button { color: var(--primary-color); }"
`;

exports[`inlineCssVars preserves all rules when complex :root selectors exist 1`] = `
":root {
        --primary-color: #ffffff;
      }
      :root.dark {
        --primary-color: #000000;
      }
      .button { color: var(--primary-color); }"
`;

exports[`inlineCssVars preserves rules with multiple complex :root selectors 1`] = `
":root {
        --primary-color: #ffffff;
      }
      :root.dark {
        --primary-color: #000000;
      }
      :root[data-theme="custom"] {
        --primary-color: #ff0000;
      }
      .button { color: var(--primary-color); }"
`;
